kubernetes-manifests/istio/comment.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: comment
  namespace: douyin
spec:
  hosts:
  - "comment.douyin.svc.cluster.local"
  tcp:
  - match:
    - port: 8080
    route:
    - destination:
        host: comment
        subset: v1
        port:
          number: 8080
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: comment
  namespace: douyin
spec:
  host: comment
  subsets:
  - name: v1
    labels:
      version: v1 
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 20
      http:
        http1MaxPendingRequests: 20
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutive5xxErrors: 2
      interval: 1s
      baseEjectionTime: 5s
      maxEjectionPercent: 100
