kubernetes-manifests/istio/feed.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: feed
  namespace: douyin
spec:
  hosts:
  - "feed.douyin.svc.cluster.local"
  gateways:
  - douyin-feed
  tcp:
  - match:
    - port: 8080
    route:
    - destination:
        host: feed
        port:
          number: 8080
