kubernetes-manifests/istio/relation.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: relation
  namespace: douyin
spec:
  hosts:
  - "relation.douyin.svc.cluster.local"
  tcp:
  - match:
    - port: 8080
    route:
    - destination:
        host: relation
        subset: v1
        port:
          number: 8080
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: relation
  namespace: douyin
spec:
  host: relation
  subsets:
  - name: v1
    labels:
      version: v1 
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 40
      http:
        http1MaxPendingRequests: 40
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutive5xxErrors: 4
      interval: 1s
      baseEjectionTime: 5s
      maxEjectionPercent: 100
