kubernetes-manifests/istio/user.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: douyin-user
  namespace: douyin
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: rpc-user
      protocol: TCP
    hosts:
    - "user.douyin.svc.cluster.local"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user
  namespace: douyin
spec:
  hosts:
  - "user.douyin.svc.cluster.local"
  gateways:
  - douyin-user
  tcp:
  - match:
    - port: 8080
    route:
    - destination:
        host: user
        port:
          number: 8080
