kubernetes-manifests/istio/video.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: video
  namespace: douyin
spec:
  hosts:
  - "video.douyin.svc.cluster.local"
  tcp:
  - match:
    - port: 8080
    route:
    - destination:
        host: video
        subset: v1
        port:
          number: 8080
      weight: 50
    - destination:
        host: video
        subset: v2    
        port:
          number: 8080
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: video
  namespace: douyin
spec:
  host: video
  subsets:
  - name: v1
    labels:
      version: v1 
  - name: v2  
    labels:
      version: v2
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 20
      http:
        http1MaxPendingRequests: 20
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutive5xxErrors: 2
      interval: 1s
      baseEjectionTime: 5s
      maxEjectionPercent: 100
